# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-06-06 14:01:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-79

    Summary:
      resources, replace "set_data" by "write"
    Revision:
      itools--main--0.9--patch-79


    modified files:
     Changelog doc/handlers.dot doc/resources.tex handlers/File.py
     resources/base.py resources/file.py resources/memory.py
     resources/zope2.py


2005-06-04 19:02:52 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-78

    Summary:
      resources, replace "get_data" by "read"
    Revision:
      itools--main--0.9--patch-78


    modified files:
     Changelog doc/files.tex doc/resources.tex resources/base.py
     resources/file.py resources/http.py resources/memory.py
     resources/zope2.py


2005-06-04 18:42:19 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-77

    Summary:
      documentation, update introduction
    Revision:
      itools--main--0.9--patch-77


    modified files:
     Changelog doc/intro.tex setup.py


2005-06-03 15:23:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-76

    Summary:
      gettext, fix PO messages encode, optimize serialization
    Revision:
      itools--main--0.9--patch-76


    modified files:
     Changelog gettext/PO.py xhtml/XHTML.py


2005-06-03 13:05:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-75

    Summary:
      documentation, update i18n chapter
    Revision:
      itools--main--0.9--patch-75


    modified files:
     Changelog doc/i18n.tex


2005-06-03 11:58:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-74

    Summary:
      gettext, PO handler serializes the messages ordered
    Revision:
      itools--main--0.9--patch-74


    modified files:
     Changelog gettext/PO.py i18n/igettext.py


2005-06-03 11:56:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-73

    Summary:
      gettext, remove obsolete N_
    Revision:
      itools--main--0.9--patch-73

