@@ -331,6 +331,9 @@ by the {\tt File} handler class:
   {\tt to\_str()}\\
   - Returns the resource data as a byte string (this is similar to the
     method {\tt handler.resource.read()}).
+
+  {\tt set\_data(data)}\\
+  - Updates the handler state with the given data.
 \end{api}
 
 with the one offered by the {\tt Text} handler class:
